<resources>
    <string name="app_name">Blockbuster</string>
    <string name="action_settings">Settings</string>
    <string name="favorite_movie_title">Favorite Movie</string>
    <string name="title_msg">Title: Movie Title</string>
    <string name="poster_fav">Poster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_genre">Genre</string>
    <string name="option_stars">Stars</string>
    <string name= "add_title">Title</string>
    <string name="add_genre">Genre</string>
    <string name="add_date">Release Date</string>
    <string name="summary">Summary</string>
    <string name="add_grading">Choose the number of stars:</string>
    <string name="add_item">Add new item</string>
    <string name="add_summary">Summary</string>
    <string name="select_photo">Add movie poster</string>
    <string name="add_poster">Choose an image from your gallery</string>
    <string name="title_details">Movie title</string>
    <string name="date_details">Release date:</string>
    <string name="genre_details">Genre:</string>
    <string name="summary_details">Summary:</string>
</resources>
