<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rb_puntuation"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/iv_poster_detail"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/image_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tv_title_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_details"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster_detail" />

        <TextView
                android:id="@+id/tv_summary_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/summary_details"
                app:layout_constraintBottom_toTopOf="@+id/rb_show_details"
                app:layout_constraintEnd_toEndOf="@+id/tv_genre_details"
                app:layout_constraintStart_toStartOf="@+id/tv_genre_details"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_details" />

        <TextView
                android:id="@+id/tv_genre_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/genre_details"
                app:layout_constraintBottom_toTopOf="@+id/tv_summary_details"
                app:layout_constraintEnd_toEndOf="@+id/tv_date_details"
                app:layout_constraintStart_toStartOf="@+id/tv_date_details"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_details" />

        <TextView
                android:id="@+id/tv_date_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/date_details"
                app:layout_constraintBottom_toTopOf="@+id/tv_genre_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_details" />

        <RatingBar
                android:id="@+id/rb_show_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:isIndicator="true"
                android:scaleX="0.6"
                android:scaleY="0.6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>