<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_genre"
                app:layout_constraintStart_toStartOf="@+id/et_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/et_movie_title" />

        <EditText
                android:id="@+id/et_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/add_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_add_image" />

        <Button
                android:id="@+id/bt_add_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_button"
                android:text="@string/add_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rb_choose_stars" />

        <EditText
                android:id="@+id/et_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/et_movie_title"
                app:layout_constraintStart_toStartOf="@+id/et_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_date"
                app:layout_constraintStart_toStartOf="@+id/et_genre"
                app:layout_constraintTop_toBottomOf="@+id/et_genre" />

        <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/et_genre"
                app:layout_constraintStart_toStartOf="@+id/et_genre"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:autofillHints="" />

        <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_summary"
                app:layout_constraintStart_toStartOf="@+id/et_date"
                app:layout_constraintTop_toBottomOf="@+id/et_date" />

        <EditText
                android:id="@+id/et_summary"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:ems="10"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/et_date"
                app:layout_constraintStart_toStartOf="@+id/et_date"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:autofillHints="" />

        <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_grading"
                app:layout_constraintStart_toStartOf="@+id/et_summary"
                app:layout_constraintTop_toBottomOf="@+id/et_summary" />

        <RatingBar
                android:id="@+id/rb_choose_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.7"
                android:scaleY="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
                android:id="@+id/iv_add_image"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/image_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/add_poster"
                app:layout_constraintBottom_toBottomOf="@+id/iv_add_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_add_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>