<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tv_title_fav_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_rv_movies"
                android:layout_marginLeft="@dimen/margin_rv_movies"
                android:layout_marginTop="@dimen/favorite_height"
                android:layout_marginEnd="@dimen/margin_rv_movies"
                android:layout_marginRight="@dimen/margin_rv_movies"
                android:layout_marginBottom="@dimen/margin_rv_movies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/iv_fav_poster"
                android:layout_width="@dimen/poster_size_width"
                android:layout_height="@dimen/poster_size_height"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/poster_fav"
                app:layout_constraintBottom_toTopOf="@+id/rv_movies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_movie_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_fav_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_fav_poster" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_msg"
                app:layout_constraintStart_toEndOf="@+id/iv_fav_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <!--android:isIndicator allows Rating Bar to be unchangeable, only displays information-->
        <RatingBar
                android:id="@+id/rb_show_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_fav_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:isIndicator="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>